# Vision2D

./: .gitignore  CMakeLists.txt  README.md  build_project.bat  readme.md  vision2d-readme.md
src/: camera_selector.cpp  connected_components.cpp  connected_components.h  custom_threshold.cpp  custom_threshold.h  embedding_classifier.cpp  embedding_classifier.h  enhanced_classifier.cpp  enhanced_classifier.h  morphological_filter.cpp  morphological_filter.h  realtime_detection.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task7.cpp  task9.cpp
